{
  "version": 4,
  "terraform_version": "0.13.2",
  "serial": 111,
  "lineage": "7e75940d-62ed-23cf-152e-0cf04875a5e6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:396253542776:internet-gateway/igw-0647ed8205698c2bf",
            "id": "igw-0647ed8205698c2bf",
            "owner_id": "396253542776",
            "tags": {
              "Name": "Fargate demo IGW"
            },
            "vpc_id": "vpc-0cfb7d68ae15bc572"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "network_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:396253542776:network-acl/acl-0b5d642b7192a90dc",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b5d642b7192a90dc",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "396253542776",
            "subnet_ids": [
              "subnet-040cd8d70404bf7e4",
              "subnet-0b655e0dd206f46c8"
            ],
            "tags": null,
            "vpc_id": "vpc-0cfb7d68ae15bc572"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_to_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0647ed8205698c2bf",
            "id": "r-rtb-031efec4c84f9d05d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-031efec4c84f9d05d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.route_table",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-031efec4c84f9d05d",
            "owner_id": "396253542776",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "default-route-table"
            },
            "vpc_id": "vpc-0cfb7d68ae15bc572"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "IGW_public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035ce77938faf12fe",
            "route_table_id": "rtb-031efec4c84f9d05d",
            "subnet_id": "subnet-040cd8d70404bf7e4"
          },
          "dependencies": [
            "aws_route_table.route_table",
            "aws_subnet.public",
            "aws_vpc.VPC",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02fad8a92ba15780c",
            "route_table_id": "rtb-031efec4c84f9d05d",
            "subnet_id": "subnet-0b655e0dd206f46c8"
          },
          "dependencies": [
            "aws_route_table.route_table",
            "aws_subnet.public",
            "aws_vpc.VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fargate_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:396253542776:security-group/sg-0676d63ce6e941cdc",
            "description": "Security group for Fargate demo vpc",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0676d63ce6e941cdc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "fargate-demo-sg",
            "name_prefix": "",
            "owner_id": "396253542776",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0cfb7d68ae15bc572"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:396253542776:subnet/subnet-040cd8d70404bf7e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.241.16.0/22",
            "id": "subnet-040cd8d70404bf7e4",
            "map_public_ip_on_launch": false,
            "owner_id": "396253542776",
            "tags": {
              "Name": "public-subnet-0"
            },
            "vpc_id": "vpc-0cfb7d68ae15bc572"
          },
          "dependencies": [
            "aws_vpc.VPC",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:396253542776:subnet/subnet-0b655e0dd206f46c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.241.20.0/22",
            "id": "subnet-0b655e0dd206f46c8",
            "map_public_ip_on_launch": false,
            "owner_id": "396253542776",
            "tags": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0cfb7d68ae15bc572"
          },
          "dependencies": [
            "aws_vpc.VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:396253542776:vpc/vpc-0cfb7d68ae15bc572",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.241.16.0/21",
            "default_network_acl_id": "acl-03918afdaefb75166",
            "default_route_table_id": "rtb-07b60c9c9c9e8ebdd",
            "default_security_group_id": "sg-0547e77487e8d9b67",
            "dhcp_options_id": "dopt-77eb431e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0cfb7d68ae15bc572",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07b60c9c9c9e8ebdd",
            "owner_id": "396253542776",
            "tags": {
              "Name": "Fargate demo VPC"
            }
          }
        }
      ]
    }
  ]
}